Added ignoring Eclipse/Scala files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# ----------------- Ruby -----------------
+
 *.gem
 *.rbc
 /.config
@@ -32,3 +34,61 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+
+# ----------------- Scala -----------------
+*.class
+*.log
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+
+# ----------------- Eclipse -----------------
+*.pydevproject
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+# sbteclipse plugin 
+.target
+
+# TeXlipse plugin
+.texlipse
+
+# My own Eclipse workspace folder
+.eclipse_scala_workspace
+
+# Eclipse cache
+.cache
