Game Of Life kata in Erlang.

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,15 @@ local.properties
 
 # Eclipse cache
 .cache
+
+# ----------------- Erlang -----------------
+.eunit
+deps
+*.o
+*.beam
+*.plt
+erl_crash.dump
+ebin
+rel/example_project
+.concrete/DEV_MODE
+.rebar
